[package]
name = "bitflyer_ticker"
version = "0.1.0"
authors = ["randymaonyan <randymaonyan@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ctrlc = "3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tungstenite = "0.13.0"
url = "2.2.1"
websocket = "0.26"
